--- a/assets/style.css
+++ b/assets/style.css
@@ -10,13 +10,19 @@
     padding: 0.5rem;
 }
 
+.row-nested{
+    padding: 0.5rem;
+}
+
 .col-nested{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     min-height: 30px;
     background-color: green;
     border: 1px solid rgb(38, 169, 246);
 }
 
 .content{
-    text-align: center;
     color: white;
 }
